--- a/e-commerce/src/App.css
+++ b/e-commerce/src/App.css
@@ -1,5 +1,3 @@
-/* src/App.css */
-
 .App {
   max-width: 1200px;
   margin: 0 auto;
@@ -13,9 +11,7 @@
   z-index: 1;
 }
 
-/* --- Estilos Globais de Componentes --- */
 
-/* Botões */
 .btn {
   display: inline-block;
   padding: 0.75rem 1.5rem;
@@ -25,7 +21,7 @@
   font-size: 1rem;
   font-weight: 500;
   transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
-  text-align: center; /* Garante que o texto do link-botão fica centrado */
+  text-align: center; 
 }
 
 .btn:hover {
@@ -56,7 +52,6 @@
   background-color: #d35400;
 }
 
-/* NOVO: Estilo para botões secundários */
 .btn-secondary {
   background-color: var(--surface-color);
   color: var(--text-color-secondary);
@@ -67,7 +62,6 @@
   color: var(--text-color);
 }
 
-/* NOVO: Contentor para as ações do formulário */
 .form-actions {
   display: flex;
   gap: 1rem;
@@ -75,7 +69,6 @@
 }
 
 
-/* Tabelas */
 .table {
   width: 100%;
   margin-top: 1.5rem;
