--- a/e-commerce/src/pages/HomePage.css
+++ b/e-commerce/src/pages/HomePage.css
@@ -26,3 +26,27 @@
 .search-input {
   width: 250px;
 }
+
+
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0;
+}
+
+@media (max-width: 768px) {
+  .home-controls {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .filters {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .search-input {
+    width: 100%;
+  }
+}
